...
    case vendors = "Vendors"
    case attire = "Attire"
    case invitations = "Invitations"
    case decorations = "Decorations"
    case catering = "Catering"
    case entertainment = "Entertainment"
    case photography = "Photography"
    case flowers = "Flowers"
    case transportation = "Transportation"
    case accommodation = "Accommodation"
    case legal = "Legal/Documents"
    case other = "Other"
    
...
